--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-light  menu shadow fixed-top" style="width:100%;">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="https://github.com/Kafaween/Bootstrap-5-portfolio-template/blob/main/assets/images/logo.png?raw=true"
+        <img src="./img/logo.png"
           alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
