--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       <div class="row ">
         <div class=" col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-1.jpg" alt="" class="img-fluid shadow ">
+          <img src="./img/portfolio-1.jpg" alt="" class="img-fluid shadow ">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -559,7 +559,7 @@
         </div>
         <div class="col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-2.jpg" alt="" class="img-fluid shadow ">
+          <img src="./img/portfolio-2.jpg" alt="" class="img-fluid shadow ">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -568,7 +568,7 @@
         </div>
         <div class=" col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-3.jpg" alt="" class="img-fluid shadow ">
+          <img src="./img/portfolio-3.jpg" alt="" class="img-fluid shadow ">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -577,7 +577,7 @@
         </div>
         <div class=" col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-4.jpg" alt="" class="img-fluid shadow">
+          <img src="./img/portfolio-4.jpg" alt="" class="img-fluid shadow">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -586,7 +586,7 @@
         </div>
         <div class="  col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-5.jpg" alt="" class="img-fluid shadow">
+          <img src="./img/portfolio-5.jpg" alt="" class="img-fluid shadow">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -595,7 +595,7 @@
         </div>
         <div class=" col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-6.jpg" alt="" class="img-fluid shadow">
+          <img src="./img/portfolio-6.jpg" alt="" class="img-fluid shadow">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -604,7 +604,7 @@
         </div>
         <div class=" col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-7.jpg" alt="" class="img-fluid shadow">
+          <img src="./img/portfolio-7.jpg" alt="" class="img-fluid shadow">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -613,7 +613,7 @@
         </div>
         <div class=" col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-8.jpg" alt="" class="img-fluid shadow">
+          <img src="./img/portfolio-8.jpg" alt="" class="img-fluid shadow">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
@@ -622,7 +622,7 @@
         </div>
         <div class="col-md-6 col-lg-4 ">
           <div class="box">
-          <img src="/img/portfolio-9.jpg" alt="" class="img-fluid shadow">
+          <img src="./img/portfolio-9.jpg" alt="" class="img-fluid shadow">
           <div class="inner">
             <div class="info">
             <h2>Project name</h2>
